# fastapi-structure-template

admin-api/: .env  Dockerfile  pyproject.toml
admin-api/app/: main.py
admin-api/app/common/: config.py  exceptions.py
admin-api/app/router/: user_router.py
admin-api/gunicorn/: gunicorn_conf.py
admin-api/src/: main.py
admin-api/src/common/: config.py  constants.py
monitoring-api/: Dockerfile
monitoring-service/: Dockerfile  pyproject.toml
