[tool.poetry]
name = "admin-api"
version = "0.1.0"
description = ""
authors = ["San Kim <waterfog9580@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.95.2"
gunicorn = "^20.1.0"
uvicorn = "^0.22.0"
sqlalchemy = "^2.0.15"
pydantic = "^1.10.7"
starlette = "^0.27.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
